refactor: modernización patrones Java 21 - excepciones tipadas, isBlank, switch expressions, eliminar try-catch redundantes
- Crear DocumentGenerationException y EmailSendException con handlers en GlobalExceptionHandler
- Reemplazar ~55 RuntimeException con excepciones tipadas (BadRequest, ResourceNotFound, etc.)
- Reemplazar 91 .trim().isEmpty() → .isBlank() en 34 archivos
- Reemplazar .size() > 0 → !.isEmpty() en ClienteService
- Optional chain en LicenciaService.getResumenLicencia() (.map/.orElse)
- Guard clause en ClienteService.validateCamposEspecificos()
- Switch expressions en ClienteFormularioService y FileStorageService
- Eliminar ~45 try-catch redundantes en 8 controllers (GlobalExceptionHandler los maneja)
- 47 archivos, -500 líneas netas de código

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>