@@ -1,7 +1,6 @@
 package com.armasimportacion.controller;
 
 import com.armasimportacion.dto.DatosContratoDTO;
-import com.armasimportacion.exception.ResourceNotFoundException;
 import com.armasimportacion.model.Cliente;
 import com.armasimportacion.model.ClienteArma;
 import com.armasimportacion.model.Usuario;
@@ -65,155 +64,138 @@ public class ClienteDocumentController {
     @GetMapping("/{id}/datos-contrato")
     @Operation(summary = "Obtener datos del contrato", description = "Obtiene los datos del cliente, pago y armas para mostrar en el popup de generación de contrato")
     public ResponseEntity<DatosContratoDTO> obtenerDatosContrato(@PathVariable Long id) {
-        try {
-            log.info("Obteniendo datos del contrato para cliente ID: {}", id);
+        log.info("Obteniendo datos del contrato para cliente ID: {}", id);
 
-            Cliente cliente = clienteService.findById(id);
-            List<Pago> pagos = pagoRepository.findByClienteId(id);
-            Pago pago = pagos != null && !pagos.isEmpty() ? pagos.get(0) : null;
+        Cliente cliente = clienteService.findById(id);
+        List<Pago> pagos = pagoRepository.findByClienteId(id);
+        Pago pago = pagos != null && !pagos.isEmpty() ? pagos.get(0) : null;
 
-            List<ClienteArma> armas = cliente.getAsignacionesArma() != null ? cliente.getAsignacionesArma() : new ArrayList<>();
+        List<ClienteArma> armas = cliente.getAsignacionesArma() != null ? cliente.getAsignacionesArma() : new ArrayList<>();
 
-            boolean documentosCompletos = documentoClienteService.verificarDocumentosCompletos(id);
+        boolean documentosCompletos = documentoClienteService.verificarDocumentosCompletos(id);
 
-            Boolean emailVerificadoRaw = cliente.getEmailVerificado();
-            Boolean emailVerificado = emailVerificadoRaw != null && emailVerificadoRaw;
+        Boolean emailVerificadoRaw = cliente.getEmailVerificado();
+        Boolean emailVerificado = emailVerificadoRaw != null && emailVerificadoRaw;
 
-            log.info("Cliente ID {} - documentosCompletos: {}, emailVerificado (raw): {}, emailVerificado (calculado): {}",
-                id, documentosCompletos, emailVerificadoRaw, emailVerificado);
+        log.info("Cliente ID {} - documentosCompletos: {}, emailVerificado (raw): {}, emailVerificado (calculado): {}",
+            id, documentosCompletos, emailVerificadoRaw, emailVerificado);
 
-            DatosContratoDTO.ClienteDTO clienteDTO = DatosContratoDTO.ClienteDTO.builder()
-                .id(cliente.getId())
-                .nombres(cliente.getNombres())
-                .apellidos(cliente.getApellidos())
-                .numeroIdentificacion(cliente.getNumeroIdentificacion())
-                .email(cliente.getEmail())
-                .telefonoPrincipal(cliente.getTelefonoPrincipal())
-                .direccion(cliente.getDireccion())
-                .provincia(cliente.getProvincia())
-                .canton(cliente.getCanton())
-                .emailVerificado(emailVerificado)
-                .tipoClienteEsCivil(cliente.esCivil())
-                .tipoClienteEsMilitar(cliente.esMilitar())
-                .tipoClienteEsPolicia(cliente.esPolicia())
+        DatosContratoDTO.ClienteDTO clienteDTO = DatosContratoDTO.ClienteDTO.builder()
+            .id(cliente.getId())
+            .nombres(cliente.getNombres())
+            .apellidos(cliente.getApellidos())
+            .numeroIdentificacion(cliente.getNumeroIdentificacion())
+            .email(cliente.getEmail())
+            .telefonoPrincipal(cliente.getTelefonoPrincipal())
+            .direccion(cliente.getDireccion())
+            .provincia(cliente.getProvincia())
+            .canton(cliente.getCanton())
+            .emailVerificado(emailVerificado)
+            .tipoClienteEsCivil(cliente.esCivil())
+            .tipoClienteEsMilitar(cliente.esMilitar())
+            .tipoClienteEsPolicia(cliente.esPolicia())
+            .build();
+
+        DatosContratoDTO.PagoDTO pagoDTO = null;
+        if (pago != null) {
+            pagoDTO = DatosContratoDTO.PagoDTO.builder()
+                .id(pago.getId())
+                .montoTotal(pago.getMontoTotal())
+                .tipoPago(pago.getTipoPago() != null ? pago.getTipoPago().name() : null)
+                .numeroCuotas(pago.getNumeroCuotas())
                 .build();
-
-            DatosContratoDTO.PagoDTO pagoDTO = null;
-            if (pago != null) {
-                pagoDTO = DatosContratoDTO.PagoDTO.builder()
-                    .id(pago.getId())
-                    .montoTotal(pago.getMontoTotal())
-                    .tipoPago(pago.getTipoPago() != null ? pago.getTipoPago().name() : null)
-                    .numeroCuotas(pago.getNumeroCuotas())
-                    .build();
-            }
-
-            List<DatosContratoDTO.ArmaDTO> armasDTO = armas.stream()
-                .map(arma -> DatosContratoDTO.ArmaDTO.builder()
-                    .id(arma.getId())
-                    .nombre(arma.getArma() != null ? arma.getArma().getModelo() : "N/A")
-                    .precioUnitario(arma.getPrecioUnitario())
-                    .cantidad(arma.getCantidad())
-                    .build())
-                .collect(Collectors.toList());
-
-            DatosContratoDTO datosContratoDTO = DatosContratoDTO.builder()
-                .cliente(clienteDTO)
-                .pago(pagoDTO)
-                .armas(armasDTO)
-                .documentosCompletos(documentosCompletos)
-                .build();
-
-            log.info("DTO construido - documentosCompletos: {}, emailVerificado: {}",
-                datosContratoDTO.getDocumentosCompletos(),
-                datosContratoDTO.getCliente() != null ? datosContratoDTO.getCliente().getEmailVerificado() : "null");
-
-            return ResponseEntity.ok(datosContratoDTO);
-        } catch (ResourceNotFoundException e) {
-            log.error("Cliente no encontrado: {}", e.getMessage());
-            throw e;
-        } catch (Exception e) {
-            log.error("Error obteniendo datos del contrato: {}", e.getMessage(), e);
-            throw new RuntimeException("Error al obtener datos del contrato: " + e.getMessage(), e);
         }
+
+        List<DatosContratoDTO.ArmaDTO> armasDTO = armas.stream()
+            .map(arma -> DatosContratoDTO.ArmaDTO.builder()
+                .id(arma.getId())
+                .nombre(arma.getArma() != null ? arma.getArma().getModelo() : "N/A")
+                .precioUnitario(arma.getPrecioUnitario())
+                .cantidad(arma.getCantidad())
+                .build())
+            .collect(Collectors.toList());
+
+        DatosContratoDTO datosContratoDTO = DatosContratoDTO.builder()
+            .cliente(clienteDTO)
+            .pago(pagoDTO)
+            .armas(armasDTO)
+            .documentosCompletos(documentosCompletos)
+            .build();
+
+        log.info("DTO construido - documentosCompletos: {}, emailVerificado: {}",
+            datosContratoDTO.getDocumentosCompletos(),
+            datosContratoDTO.getCliente() != null ? datosContratoDTO.getCliente().getEmailVerificado() : "null");
+
+        return ResponseEntity.ok(datosContratoDTO);
     }
 
     @PostMapping("/{id}/generar-contrato")
     @Operation(summary = "Generar contrato del cliente", description = "Genera un contrato PDF para el cliente. Requiere documentos completos y email validado. Confirma asignación definitiva al grupo.")
     public ResponseEntity<Map<String, Object>> generarContrato(@PathVariable Long id) {
-        try {
-            log.info("Generando contrato para cliente ID: {}", id);
+        log.info("Generando contrato para cliente ID: {}", id);
 
-            Cliente cliente = clienteService.findById(id);
+        Cliente cliente = clienteService.findById(id);
 
-            if (cliente.getEstado() == EstadoCliente.PENDIENTE_ASIGNACION_CLIENTE) {
-                return ResponseEntity.badRequest()
-                    .body(Map.of("error", "No se puede generar contrato para clientes fantasma (vendedores). Los vendedores no requieren contrato."));
-            }
-
-            if (cliente.getEmailVerificado() == null || !cliente.getEmailVerificado()) {
-                return ResponseEntity.badRequest()
-                    .body(Map.of("error", "El cliente debe tener su email validado antes de generar el contrato. Por favor, valide los datos personales del cliente primero."));
-            }
-
-            boolean documentosCompletos = documentoClienteService.verificarDocumentosCompletos(id);
-            if (!documentosCompletos) {
-                return ResponseEntity.badRequest()
-                    .body(Map.of("error", "El cliente debe tener todos sus documentos obligatorios cargados antes de generar el contrato."));
-            }
-
-            List<Pago> pagos = pagoRepository.findByClienteId(id);
-            Pago pago = pagos != null && !pagos.isEmpty() ? pagos.get(0) : null;
-
-            List<DocumentoGenerado> documentos = gestionDocumentosServiceHelper.generarYGuardarDocumentos(cliente, pago);
-
-            if (documentos == null || documentos.isEmpty()) {
-                return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                    .body(Map.of("error", "No se generaron documentos"));
-            }
-
-            try {
-                grupoImportacionClienteService.confirmarAsignacionCliente(id);
-                log.info("Asignacion del cliente ID {} confirmada definitivamente al grupo", id);
-            } catch (Exception e) {
-                log.warn("No se pudo confirmar asignacion del cliente al grupo (puede no tener asignacion pendiente): {}", e.getMessage());
-            }
-
-            DocumentoGenerado documentoPrincipal = documentos.get(0);
-
-            enviarDocumentosPorCorreo(cliente, documentos);
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("success", true);
-            response.put("message", documentos.size() + " documento(s) generado(s) exitosamente");
-            response.put("documentosGenerados", documentos.size());
-            response.put("documentoId", documentoPrincipal.getId());
-            response.put("nombreArchivo", documentoPrincipal.getNombreArchivo());
-            response.put("urlArchivo", documentoPrincipal.getUrlArchivo());
-
-            List<Map<String, Object>> documentosInfo = documentos.stream()
-                .map(doc -> {
-                    Map<String, Object> docInfo = new HashMap<>();
-                    docInfo.put("id", doc.getId());
-                    docInfo.put("nombre", doc.getNombre());
-                    docInfo.put("tipoDocumento", doc.getTipoDocumento().name());
-                    docInfo.put("nombreArchivo", doc.getNombreArchivo());
-                    docInfo.put("urlArchivo", doc.getUrlArchivo());
-                    return docInfo;
-                })
-                .collect(Collectors.toList());
-            response.put("documentos", documentosInfo);
-
-            log.info("{} documento(s) generado(s) exitosamente: {}", documentos.size(), documentoPrincipal.getNombreArchivo());
-            return ResponseEntity.ok(response);
-        } catch (ResourceNotFoundException e) {
-            log.error("Cliente no encontrado: {}", e.getMessage());
-            throw e;
-        } catch (Exception e) {
-            log.error("Error generando contrato: {}", e.getMessage(), e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body(Map.of("error", "Error al generar contrato: " + e.getMessage()));
+        if (cliente.getEstado() == EstadoCliente.PENDIENTE_ASIGNACION_CLIENTE) {
+            return ResponseEntity.badRequest()
+                .body(Map.of("error", "No se puede generar contrato para clientes fantasma (vendedores). Los vendedores no requieren contrato."));
         }
+
+        if (cliente.getEmailVerificado() == null || !cliente.getEmailVerificado()) {
+            return ResponseEntity.badRequest()
+                .body(Map.of("error", "El cliente debe tener su email validado antes de generar el contrato. Por favor, valide los datos personales del cliente primero."));
+        }
+
+        boolean documentosCompletos = documentoClienteService.verificarDocumentosCompletos(id);
+        if (!documentosCompletos) {
+            return ResponseEntity.badRequest()
+                .body(Map.of("error", "El cliente debe tener todos sus documentos obligatorios cargados antes de generar el contrato."));
+        }
+
+        List<Pago> pagos = pagoRepository.findByClienteId(id);
+        Pago pago = pagos != null && !pagos.isEmpty() ? pagos.get(0) : null;
+
+        List<DocumentoGenerado> documentos = gestionDocumentosServiceHelper.generarYGuardarDocumentos(cliente, pago);
+
+        if (documentos == null || documentos.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body(Map.of("error", "No se generaron documentos"));
+        }
+
+        try {
+            grupoImportacionClienteService.confirmarAsignacionCliente(id);
+            log.info("Asignacion del cliente ID {} confirmada definitivamente al grupo", id);
+        } catch (Exception e) {
+            log.warn("No se pudo confirmar asignacion del cliente al grupo (puede no tener asignacion pendiente): {}", e.getMessage());
+        }
+
+        DocumentoGenerado documentoPrincipal = documentos.get(0);
+
+        enviarDocumentosPorCorreo(cliente, documentos);
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("success", true);
+        response.put("message", documentos.size() + " documento(s) generado(s) exitosamente");
+        response.put("documentosGenerados", documentos.size());
+        response.put("documentoId", documentoPrincipal.getId());
+        response.put("nombreArchivo", documentoPrincipal.getNombreArchivo());
+        response.put("urlArchivo", documentoPrincipal.getUrlArchivo());
+
+        List<Map<String, Object>> documentosInfo = documentos.stream()
+            .map(doc -> {
+                Map<String, Object> docInfo = new HashMap<>();
+                docInfo.put("id", doc.getId());
+                docInfo.put("nombre", doc.getNombre());
+                docInfo.put("tipoDocumento", doc.getTipoDocumento().name());
+                docInfo.put("nombreArchivo", doc.getNombreArchivo());
+                docInfo.put("urlArchivo", doc.getUrlArchivo());
+                return docInfo;
+            })
+            .collect(Collectors.toList());
+        response.put("documentos", documentosInfo);
+
+        log.info("{} documento(s) generado(s) exitosamente: {}", documentos.size(), documentoPrincipal.getNombreArchivo());
+        return ResponseEntity.ok(response);
     }
 
     @PostMapping(value = "/{id}/cargar-contrato-firmado", consumes = MediaType.MULTIPART_FORM_DATA_VALUE)
@@ -221,94 +203,85 @@ public class ClienteDocumentController {
     public ResponseEntity<Map<String, Object>> cargarContratoFirmado(
             @PathVariable Long id,
             @RequestParam("archivo") MultipartFile archivo,
-            @RequestParam(value = "documentoId", required = false) Long documentoId) {
-        try {
-            log.info("Cargando contrato firmado para cliente ID: {}", id);
+            @RequestParam(value = "documentoId", required = false) Long documentoId) throws java.io.IOException {
+        log.info("Cargando contrato firmado para cliente ID: {}", id);
 
-            Cliente cliente = clienteService.findById(id);
+        Cliente cliente = clienteService.findById(id);
 
-            DocumentoGenerado contratoGenerado;
-            if (documentoId != null) {
-                contratoGenerado = documentoGeneradoRepository.findById(documentoId)
-                    .orElse(null);
-                if (contratoGenerado == null || contratoGenerado.getCliente() == null
-                    || !contratoGenerado.getCliente().getId().equals(cliente.getId())) {
-                    return ResponseEntity.badRequest()
-                        .body(Map.of("error", "No se encontró el documento solicitado para este cliente."));
-                }
-            } else {
-                boolean esCivil = cliente.esCivil();
-                List<DocumentoGenerado> documentosCliente = documentoGeneradoRepository.findByClienteId(cliente.getId());
-                if (documentosCliente.isEmpty()) {
-                    return ResponseEntity.badRequest()
-                        .body(Map.of("error", "No se encontró un documento generado para este cliente. Debe generar la solicitud o documentos primero."));
-                }
-
-                TipoDocumentoGenerado tipoPreferido = esCivil
-                    ? TipoDocumentoGenerado.SOLICITUD_COMPRA
-                    : TipoDocumentoGenerado.CONTRATO;
-
-                List<DocumentoGenerado> documentosFiltrados = documentosCliente.stream()
-                    .filter(doc -> doc.getTipoDocumento() == tipoPreferido)
-                    .filter(doc -> doc.getEstado() != EstadoDocumentoGenerado.FIRMADO)
-                    .toList();
-
-                List<DocumentoGenerado> candidatos = documentosFiltrados.isEmpty()
-                    ? documentosCliente.stream()
-                        .filter(doc -> doc.getEstado() != EstadoDocumentoGenerado.FIRMADO)
-                        .toList()
-                    : documentosFiltrados;
-
-                candidatos.sort((a, b) -> {
-                    if (a.getFechaGeneracion() == null && b.getFechaGeneracion() == null) return 0;
-                    if (a.getFechaGeneracion() == null) return 1;
-                    if (b.getFechaGeneracion() == null) return -1;
-                    return b.getFechaGeneracion().compareTo(a.getFechaGeneracion());
-                });
-
-                contratoGenerado = candidatos.get(0);
+        DocumentoGenerado contratoGenerado;
+        if (documentoId != null) {
+            contratoGenerado = documentoGeneradoRepository.findById(documentoId)
+                .orElse(null);
+            if (contratoGenerado == null || contratoGenerado.getCliente() == null
+                || !contratoGenerado.getCliente().getId().equals(cliente.getId())) {
+                return ResponseEntity.badRequest()
+                    .body(Map.of("error", "No se encontró el documento solicitado para este cliente."));
+            }
+        } else {
+            boolean esCivil = cliente.esCivil();
+            List<DocumentoGenerado> documentosCliente = documentoGeneradoRepository.findByClienteId(cliente.getId());
+            if (documentosCliente.isEmpty()) {
+                return ResponseEntity.badRequest()
+                    .body(Map.of("error", "No se encontró un documento generado para este cliente. Debe generar la solicitud o documentos primero."));
             }
 
-            String prefijoArchivo = contratoGenerado.getTipoDocumento() == TipoDocumentoGenerado.SOLICITUD_COMPRA
-                ? "solicitud_firmada_"
-                : "contrato_firmado_";
-            String nombreArchivoFirmado = prefijoArchivo + cliente.getApellidos().replaceAll("[^a-zA-ZáéíóúÁÉÍÓÚñÑ\\s]", "").trim().replaceAll("\\s+", "_").toLowerCase()
-                + "_" + cliente.getNombres().replaceAll("[^a-zA-ZáéíóúÁÉÍÓÚñÑ\\s]", "").trim().replaceAll("\\s+", "_").toLowerCase()
-                + "_" + cliente.getNumeroIdentificacion() + ".pdf";
+            TipoDocumentoGenerado tipoPreferido = esCivil
+                ? TipoDocumentoGenerado.SOLICITUD_COMPRA
+                : TipoDocumentoGenerado.CONTRATO;
 
-            byte[] archivoBytes = archivo.getBytes();
-            String rutaArchivo = fileStorageService.guardarDocumentoGeneradoCliente(
-                cliente.getNumeroIdentificacion(), archivoBytes, nombreArchivoFirmado);
+            List<DocumentoGenerado> documentosFiltrados = documentosCliente.stream()
+                .filter(doc -> doc.getTipoDocumento() == tipoPreferido)
+                .filter(doc -> doc.getEstado() != EstadoDocumentoGenerado.FIRMADO)
+                .toList();
 
-            contratoGenerado.setNombreArchivo(nombreArchivoFirmado);
-            contratoGenerado.setRutaArchivo(rutaArchivo);
-            contratoGenerado.setTamanioBytes(archivo.getSize());
-            contratoGenerado.setFechaFirma(LocalDateTime.now());
-            contratoGenerado.setEstado(EstadoDocumentoGenerado.FIRMADO);
-            contratoGenerado.setDescripcion("Documento firmado por el cliente");
+            List<DocumentoGenerado> candidatos = documentosFiltrados.isEmpty()
+                ? documentosCliente.stream()
+                    .filter(doc -> doc.getEstado() != EstadoDocumentoGenerado.FIRMADO)
+                    .toList()
+                : documentosFiltrados;
 
-            documentoGeneradoRepository.save(contratoGenerado);
+            candidatos.sort((a, b) -> {
+                if (a.getFechaGeneracion() == null && b.getFechaGeneracion() == null) return 0;
+                if (a.getFechaGeneracion() == null) return 1;
+                if (b.getFechaGeneracion() == null) return -1;
+                return b.getFechaGeneracion().compareTo(a.getFechaGeneracion());
+            });
 
-            cliente.setEstado(EstadoCliente.CONTRATO_FIRMADO);
-            clienteRepository.save(cliente);
-
-            Map<String, Object> response = new HashMap<>();
-            response.put("success", true);
-            response.put("message", "Documento firmado cargado exitosamente");
-            response.put("documentoId", contratoGenerado.getId());
-            response.put("nombreArchivo", nombreArchivoFirmado);
-            response.put("tipoDocumento", contratoGenerado.getTipoDocumento());
-
-            log.info("Documento firmado cargado exitosamente: {}", nombreArchivoFirmado);
-            return ResponseEntity.ok(response);
-        } catch (ResourceNotFoundException e) {
-            log.error("Cliente no encontrado: {}", e.getMessage());
-            throw e;
-        } catch (Exception e) {
-            log.error("Error cargando contrato firmado: {}", e.getMessage(), e);
-            return ResponseEntity.status(HttpStatus.INTERNAL_SERVER_ERROR)
-                .body(Map.of("error", "Error al cargar contrato firmado: " + e.getMessage()));
+            contratoGenerado = candidatos.get(0);
         }
+
+        String prefijoArchivo = contratoGenerado.getTipoDocumento() == TipoDocumentoGenerado.SOLICITUD_COMPRA
+            ? "solicitud_firmada_"
+            : "contrato_firmado_";
+        String nombreArchivoFirmado = prefijoArchivo + cliente.getApellidos().replaceAll("[^a-zA-ZáéíóúÁÉÍÓÚñÑ\\s]", "").trim().replaceAll("\\s+", "_").toLowerCase()
+            + "_" + cliente.getNombres().replaceAll("[^a-zA-ZáéíóúÁÉÍÓÚñÑ\\s]", "").trim().replaceAll("\\s+", "_").toLowerCase()
+            + "_" + cliente.getNumeroIdentificacion() + ".pdf";
+
+        byte[] archivoBytes = archivo.getBytes();
+        String rutaArchivo = fileStorageService.guardarDocumentoGeneradoCliente(
+            cliente.getNumeroIdentificacion(), archivoBytes, nombreArchivoFirmado);
+
+        contratoGenerado.setNombreArchivo(nombreArchivoFirmado);
+        contratoGenerado.setRutaArchivo(rutaArchivo);
+        contratoGenerado.setTamanioBytes(archivo.getSize());
+        contratoGenerado.setFechaFirma(LocalDateTime.now());
+        contratoGenerado.setEstado(EstadoDocumentoGenerado.FIRMADO);
+        contratoGenerado.setDescripcion("Documento firmado por el cliente");
+
+        documentoGeneradoRepository.save(contratoGenerado);
+
+        cliente.setEstado(EstadoCliente.CONTRATO_FIRMADO);
+        clienteRepository.save(cliente);
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("success", true);
+        response.put("message", "Documento firmado cargado exitosamente");
+        response.put("documentoId", contratoGenerado.getId());
+        response.put("nombreArchivo", nombreArchivoFirmado);
+        response.put("tipoDocumento", contratoGenerado.getTipoDocumento());
+
+        log.info("Documento firmado cargado exitosamente: {}", nombreArchivoFirmado);
+        return ResponseEntity.ok(response);
     }
 
     // ===== HELPERS PRIVADOS =====
@@ -341,10 +314,10 @@ public class ClienteDocumentController {
                 .filter(adj -> adj != null)
                 .collect(Collectors.toList());
 
-            if (cliente.getEmail() != null && !cliente.getEmail().trim().isEmpty()) {
+            if (cliente.getEmail() != null && !cliente.getEmail().isBlank()) {
                 emailService.enviarDocumentosGenerados(
                     cliente.getEmail().trim(),
-                    nombreCliente.trim().isEmpty() ? "Cliente" : nombreCliente.trim(),
+                    nombreCliente.isBlank() ? "Cliente" : nombreCliente.trim(),
                     nombreVendedor,
                     licencia,
                     adjuntos
@@ -352,10 +325,10 @@ public class ClienteDocumentController {
                 log.info("Documentos enviados al cliente: {}", cliente.getEmail());
             }
 
-            if (vendedor != null && vendedor.getEmail() != null && !vendedor.getEmail().trim().isEmpty()) {
+            if (vendedor != null && vendedor.getEmail() != null && !vendedor.getEmail().isBlank()) {
                 emailService.enviarDocumentosGenerados(
                     vendedor.getEmail().trim(),
-                    nombreCliente.trim().isEmpty() ? "Cliente" : nombreCliente.trim(),
+                    nombreCliente.isBlank() ? "Cliente" : nombreCliente.trim(),
                     nombreVendedor,
                     licencia,
                     adjuntos
