@@ -35,100 +35,94 @@ public class DocumentoController {
      */
     @GetMapping("/serve/{documentoId}")
     public ResponseEntity<Resource> serveDocumentoCliente(@PathVariable Long documentoId) {
-        try {
-            log.info("DEBUG: Solicitando documento cliente ID: {}", documentoId);
-            
-            Optional<DocumentoCliente> documentoOpt = documentoClienteRepository.findById(documentoId);
-            if (!documentoOpt.isPresent()) {
-                log.error("Documento cliente no encontrado: {}", documentoId);
-                return ResponseEntity.notFound().build();
-            }
-            
-            DocumentoCliente documento = documentoOpt.get();
-            log.info("DEBUG: Documento encontrado: {} - Ruta BD: {} - Estado: {}",
-                    documento.getNombreArchivo(), documento.getRutaArchivo(), documento.getEstado());
-            
-            // Validar que el documento no esté reemplazado o sin ruta
-            if (documento.getEstado() == DocumentoCliente.EstadoDocumento.REEMPLAZADO) {
-                log.warn("Intento de acceder a documento REEMPLAZADO (ID: {})", documentoId);
-                return ResponseEntity.notFound().build();
-            }
-            
-            if (documento.getRutaArchivo() == null || documento.getRutaArchivo().trim().isEmpty()) {
-                log.error("Documento no tiene ruta de archivo: ID={}", documentoId);
-                return ResponseEntity.notFound().build();
-            }
-            
-            // Construir la ruta completa del archivo
-            String rutaArchivo = construirRutaCompletaDocumentoCliente(documento.getRutaArchivo());
-            log.info("DEBUG: Ruta original en BD: {}", documento.getRutaArchivo());
-            log.info("DEBUG: Ruta completa construida: {}", rutaArchivo);
-            
-            File archivo = new File(rutaArchivo);
-            String rutaAbsoluta = archivo.getAbsolutePath();
-            log.info("DEBUG: Verificando existencia del archivo: {}", rutaAbsoluta);
-            
-            if (!archivo.exists() || !archivo.isFile()) {
-                log.error("Archivo fisico no existe o no es un archivo: {}", rutaAbsoluta);
-                log.error("Ruta original en BD: {}", documento.getRutaArchivo());
-                
-                // Intentar rutas alternativas para diagnóstico
-                String[] rutasAlternativas = {
-                    "/app/documentacion/documentos_cliente/" + documento.getRutaArchivo(),
-                    "/app/documentacion/" + documento.getRutaArchivo(),
-                    documento.getRutaArchivo(),
-                    // También intentar si la ruta ya incluye documentos_cliente
-                    rutaArchivo.replace("/documentos_cliente/documentos_cliente/", "/documentos_cliente/")
-                };
-                
-                boolean encontrado = false;
-                String rutaEncontrada = null;
-                for (String rutaAlt : rutasAlternativas) {
-                    File archivoAlt = new File(rutaAlt);
-                    boolean existe = archivoAlt.exists() && archivoAlt.isFile();
-                    log.info("Verificando ruta alternativa: {} - Existe: {}", rutaAlt, existe);
-                    if (existe && !encontrado) {
-                        encontrado = true;
-                        rutaEncontrada = rutaAlt;
-                    }
-                }
-                
-                if (encontrado && rutaEncontrada != null) {
-                    log.warn("Archivo encontrado en ruta alternativa, usando: {}", rutaEncontrada);
-                    archivo = new File(rutaEncontrada);
-                } else {
-                    log.error("No se encontro el archivo en ninguna ruta alternativa");
-                    return ResponseEntity.notFound().build();
-                }
-            }
-            
-            Resource resource = new FileSystemResource(archivo);
-            
-            HttpHeaders headers = new HttpHeaders();
-            String nombreArchivo = documento.getNombreArchivo() != null ? documento.getNombreArchivo() : "documento";
-            boolean esExcel = nombreArchivo.toLowerCase().endsWith(".xlsx");
-            String contentType = esExcel
-                ? "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                : "application/pdf";
-            String disposition = esExcel ? "attachment" : "inline";
-            headers.add(HttpHeaders.CONTENT_DISPOSITION, disposition + "; filename=\"" + nombreArchivo + "\"");
-            headers.add(HttpHeaders.CONTENT_TYPE, contentType);
-            // Permitir que se muestre en iframes del mismo origen
-            headers.add("X-Frame-Options", "SAMEORIGIN");
-            headers.add("Content-Security-Policy", "frame-ancestors 'self'");
-            
-            log.info("Sirviendo archivo: {} ({} bytes)", documento.getNombreArchivo(), archivo.length());
+        log.info("DEBUG: Solicitando documento cliente ID: {}", documentoId);
 
-            return ResponseEntity.ok()
-                    .headers(headers)
-                    .contentLength(archivo.length())
-                    .contentType(MediaType.parseMediaType(contentType))
-                    .body(resource);
-
-        } catch (Exception e) {
-            log.error("Error sirviendo documento cliente {}: {}", documentoId, e.getMessage(), e);
-            return ResponseEntity.internalServerError().build();
+        Optional<DocumentoCliente> documentoOpt = documentoClienteRepository.findById(documentoId);
+        if (!documentoOpt.isPresent()) {
+            log.error("Documento cliente no encontrado: {}", documentoId);
+            return ResponseEntity.notFound().build();
         }
+
+        DocumentoCliente documento = documentoOpt.get();
+        log.info("DEBUG: Documento encontrado: {} - Ruta BD: {} - Estado: {}",
+                documento.getNombreArchivo(), documento.getRutaArchivo(), documento.getEstado());
+
+        // Validar que el documento no esté reemplazado o sin ruta
+        if (documento.getEstado() == DocumentoCliente.EstadoDocumento.REEMPLAZADO) {
+            log.warn("Intento de acceder a documento REEMPLAZADO (ID: {})", documentoId);
+            return ResponseEntity.notFound().build();
+        }
+
+        if (documento.getRutaArchivo() == null || documento.getRutaArchivo().isBlank()) {
+            log.error("Documento no tiene ruta de archivo: ID={}", documentoId);
+            return ResponseEntity.notFound().build();
+        }
+
+        // Construir la ruta completa del archivo
+        String rutaArchivo = construirRutaCompletaDocumentoCliente(documento.getRutaArchivo());
+        log.info("DEBUG: Ruta original en BD: {}", documento.getRutaArchivo());
+        log.info("DEBUG: Ruta completa construida: {}", rutaArchivo);
+
+        File archivo = new File(rutaArchivo);
+        String rutaAbsoluta = archivo.getAbsolutePath();
+        log.info("DEBUG: Verificando existencia del archivo: {}", rutaAbsoluta);
+
+        if (!archivo.exists() || !archivo.isFile()) {
+            log.error("Archivo fisico no existe o no es un archivo: {}", rutaAbsoluta);
+            log.error("Ruta original en BD: {}", documento.getRutaArchivo());
+
+            // Intentar rutas alternativas para diagnóstico
+            String[] rutasAlternativas = {
+                "/app/documentacion/documentos_cliente/" + documento.getRutaArchivo(),
+                "/app/documentacion/" + documento.getRutaArchivo(),
+                documento.getRutaArchivo(),
+                // También intentar si la ruta ya incluye documentos_cliente
+                rutaArchivo.replace("/documentos_cliente/documentos_cliente/", "/documentos_cliente/")
+            };
+
+            boolean encontrado = false;
+            String rutaEncontrada = null;
+            for (String rutaAlt : rutasAlternativas) {
+                File archivoAlt = new File(rutaAlt);
+                boolean existe = archivoAlt.exists() && archivoAlt.isFile();
+                log.info("Verificando ruta alternativa: {} - Existe: {}", rutaAlt, existe);
+                if (existe && !encontrado) {
+                    encontrado = true;
+                    rutaEncontrada = rutaAlt;
+                }
+            }
+
+            if (encontrado && rutaEncontrada != null) {
+                log.warn("Archivo encontrado en ruta alternativa, usando: {}", rutaEncontrada);
+                archivo = new File(rutaEncontrada);
+            } else {
+                log.error("No se encontro el archivo en ninguna ruta alternativa");
+                return ResponseEntity.notFound().build();
+            }
+        }
+
+        Resource resource = new FileSystemResource(archivo);
+
+        HttpHeaders headers = new HttpHeaders();
+        String nombreArchivo = documento.getNombreArchivo() != null ? documento.getNombreArchivo() : "documento";
+        boolean esExcel = nombreArchivo.toLowerCase().endsWith(".xlsx");
+        String contentType = esExcel
+            ? "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+            : "application/pdf";
+        String disposition = esExcel ? "attachment" : "inline";
+        headers.add(HttpHeaders.CONTENT_DISPOSITION, disposition + "; filename=\"" + nombreArchivo + "\"");
+        headers.add(HttpHeaders.CONTENT_TYPE, contentType);
+        // Permitir que se muestre en iframes del mismo origen
+        headers.add("X-Frame-Options", "SAMEORIGIN");
+        headers.add("Content-Security-Policy", "frame-ancestors 'self'");
+
+        log.info("Sirviendo archivo: {} ({} bytes)", documento.getNombreArchivo(), archivo.length());
+
+        return ResponseEntity.ok()
+                .headers(headers)
+                .contentLength(archivo.length())
+                .contentType(MediaType.parseMediaType(contentType))
+                .body(resource);
     }
     
     /**
@@ -136,60 +130,54 @@ public class DocumentoController {
      */
     @GetMapping("/serve-generated/{documentoId}")
     public ResponseEntity<Resource> serveDocumentoGenerado(@PathVariable Long documentoId) {
-        try {
-            log.info("DEBUG: Solicitando documento generado ID: {}", documentoId);
-            
-            Optional<DocumentoGenerado> documentoOpt = documentoGeneradoRepository.findById(documentoId);
-            if (!documentoOpt.isPresent()) {
-                log.error("Documento generado no encontrado: {}", documentoId);
-                return ResponseEntity.notFound().build();
-            }
-            
-            DocumentoGenerado documento = documentoOpt.get();
-            log.info("DEBUG: Documento encontrado: {} - Ruta BD: {}", documento.getNombreArchivo(), documento.getRutaArchivo());
-            
-            // Construir la ruta completa del archivo
-            String rutaArchivo = construirRutaCompletaDocumentoGenerado(
-                documento.getRutaArchivo(), 
-                documento.getNombreArchivo()
-            );
-            log.info("DEBUG: Ruta completa construida: {}", rutaArchivo);
+        log.info("DEBUG: Solicitando documento generado ID: {}", documentoId);
 
-            File archivo = new File(rutaArchivo);
-            if (!archivo.exists()) {
-                log.error("Archivo fisico no existe: {}", rutaArchivo);
-                log.error("Ruta original en BD: {}", documento.getRutaArchivo());
-                log.error("Nombre archivo: {}", documento.getNombreArchivo());
-                return ResponseEntity.notFound().build();
-            }
-            
-            Resource resource = new FileSystemResource(archivo);
-            
-            HttpHeaders headers = new HttpHeaders();
-            String nombreArchivo = documento.getNombreArchivo() != null ? documento.getNombreArchivo() : "documento";
-            boolean esExcel = nombreArchivo.toLowerCase().endsWith(".xlsx");
-            String contentType = esExcel
-                ? "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
-                : "application/pdf";
-            String disposition = esExcel ? "attachment" : "inline";
-            headers.add(HttpHeaders.CONTENT_DISPOSITION, disposition + "; filename=\"" + nombreArchivo + "\"");
-            headers.add(HttpHeaders.CONTENT_TYPE, contentType);
-            // Permitir que se muestre en iframes del mismo origen
-            headers.add("X-Frame-Options", "SAMEORIGIN");
-            headers.add("Content-Security-Policy", "frame-ancestors 'self'");
-            
-            log.info("Sirviendo archivo: {} ({} bytes)", documento.getNombreArchivo(), archivo.length());
-
-            return ResponseEntity.ok()
-                    .headers(headers)
-                    .contentLength(archivo.length())
-                    .contentType(MediaType.parseMediaType(contentType))
-                    .body(resource);
-
-        } catch (Exception e) {
-            log.error("Error sirviendo documento generado {}: {}", documentoId, e.getMessage(), e);
-            return ResponseEntity.internalServerError().build();
+        Optional<DocumentoGenerado> documentoOpt = documentoGeneradoRepository.findById(documentoId);
+        if (!documentoOpt.isPresent()) {
+            log.error("Documento generado no encontrado: {}", documentoId);
+            return ResponseEntity.notFound().build();
         }
+
+        DocumentoGenerado documento = documentoOpt.get();
+        log.info("DEBUG: Documento encontrado: {} - Ruta BD: {}", documento.getNombreArchivo(), documento.getRutaArchivo());
+
+        // Construir la ruta completa del archivo
+        String rutaArchivo = construirRutaCompletaDocumentoGenerado(
+            documento.getRutaArchivo(),
+            documento.getNombreArchivo()
+        );
+        log.info("DEBUG: Ruta completa construida: {}", rutaArchivo);
+
+        File archivo = new File(rutaArchivo);
+        if (!archivo.exists()) {
+            log.error("Archivo fisico no existe: {}", rutaArchivo);
+            log.error("Ruta original en BD: {}", documento.getRutaArchivo());
+            log.error("Nombre archivo: {}", documento.getNombreArchivo());
+            return ResponseEntity.notFound().build();
+        }
+
+        Resource resource = new FileSystemResource(archivo);
+
+        HttpHeaders headers = new HttpHeaders();
+        String nombreArchivo = documento.getNombreArchivo() != null ? documento.getNombreArchivo() : "documento";
+        boolean esExcel = nombreArchivo.toLowerCase().endsWith(".xlsx");
+        String contentType = esExcel
+            ? "application/vnd.openxmlformats-officedocument.spreadsheetml.sheet"
+            : "application/pdf";
+        String disposition = esExcel ? "attachment" : "inline";
+        headers.add(HttpHeaders.CONTENT_DISPOSITION, disposition + "; filename=\"" + nombreArchivo + "\"");
+        headers.add(HttpHeaders.CONTENT_TYPE, contentType);
+        // Permitir que se muestre en iframes del mismo origen
+        headers.add("X-Frame-Options", "SAMEORIGIN");
+        headers.add("Content-Security-Policy", "frame-ancestors 'self'");
+
+        log.info("Sirviendo archivo: {} ({} bytes)", documento.getNombreArchivo(), archivo.length());
+
+        return ResponseEntity.ok()
+                .headers(headers)
+                .contentLength(archivo.length())
+                .contentType(MediaType.parseMediaType(contentType))
+                .body(resource);
     }
     
     /**
@@ -200,7 +188,7 @@ public class DocumentoController {
     private String construirRutaCompletaDocumentoCliente(String rutaBD) {
         log.info("DEBUG construirRutaCompletaDocumentoCliente - rutaBD recibida: {}", rutaBD);
         
-        if (rutaBD == null || rutaBD.trim().isEmpty()) {
+        if (rutaBD == null || rutaBD.isBlank()) {
             log.error("Ruta BD vacia o nula");
             throw new IllegalArgumentException("La ruta del documento no puede estar vacía");
         }
@@ -272,49 +260,43 @@ public class DocumentoController {
      */
     @GetMapping("/debug/{documentoId}")
     public ResponseEntity<Map<String, Object>> debugDocumento(@PathVariable Long documentoId) {
-        try {
-            log.info("DEBUG: Diagnostico para documento ID: {}", documentoId);
-            
-            Optional<DocumentoCliente> documentoOpt = documentoClienteRepository.findById(documentoId);
-            if (!documentoOpt.isPresent()) {
-                return ResponseEntity.notFound().build();
-            }
-            
-            DocumentoCliente documento = documentoOpt.get();
-            String rutaOriginal = documento.getRutaArchivo();
-            String rutaCompleta = construirRutaCompletaDocumentoCliente(rutaOriginal);
-            File archivo = new File(rutaCompleta);
-            
-            Map<String, Object> debugInfo = new HashMap<>();
-            debugInfo.put("documentoId", documentoId);
-            debugInfo.put("nombreArchivo", documento.getNombreArchivo());
-            debugInfo.put("rutaOriginalBD", rutaOriginal);
-            debugInfo.put("rutaCompleta", rutaCompleta);
-            debugInfo.put("archivoExiste", archivo.exists());
-            debugInfo.put("archivoTamanio", archivo.exists() ? archivo.length() : 0);
-            debugInfo.put("archivoPermisos", archivo.exists() ? archivo.canRead() : false);
-            debugInfo.put("directorioPadre", archivo.getParent());
-            debugInfo.put("directorioPadreExiste", archivo.getParentFile() != null && archivo.getParentFile().exists());
-            
-            // Verificar rutas alternativas
-            List<String> rutasAlternativas = new ArrayList<>();
-            rutasAlternativas.add("/app/documentacion/documentos_cliente/" + rutaOriginal);
-            rutasAlternativas.add("./documentacion/documentos_cliente/" + rutaOriginal);
-            rutasAlternativas.add("documentacion/documentos_cliente/" + rutaOriginal);
-            
-            Map<String, Boolean> rutasAlternativasExisten = new HashMap<>();
-            for (String rutaAlt : rutasAlternativas) {
-                rutasAlternativasExisten.put(rutaAlt, new File(rutaAlt).exists());
-            }
-            debugInfo.put("rutasAlternativas", rutasAlternativasExisten);
-            
-            log.info("DEBUG: Informacion de diagnostico: {}", debugInfo);
-            
-            return ResponseEntity.ok(debugInfo);
-            
-        } catch (Exception e) {
-            log.error("Error en diagnostico de documento {}: {}", documentoId, e.getMessage(), e);
-            return ResponseEntity.internalServerError().build();
+        log.info("DEBUG: Diagnostico para documento ID: {}", documentoId);
+
+        Optional<DocumentoCliente> documentoOpt = documentoClienteRepository.findById(documentoId);
+        if (!documentoOpt.isPresent()) {
+            return ResponseEntity.notFound().build();
         }
+
+        DocumentoCliente documento = documentoOpt.get();
+        String rutaOriginal = documento.getRutaArchivo();
+        String rutaCompleta = construirRutaCompletaDocumentoCliente(rutaOriginal);
+        File archivo = new File(rutaCompleta);
+
+        Map<String, Object> debugInfo = new HashMap<>();
+        debugInfo.put("documentoId", documentoId);
+        debugInfo.put("nombreArchivo", documento.getNombreArchivo());
+        debugInfo.put("rutaOriginalBD", rutaOriginal);
+        debugInfo.put("rutaCompleta", rutaCompleta);
+        debugInfo.put("archivoExiste", archivo.exists());
+        debugInfo.put("archivoTamanio", archivo.exists() ? archivo.length() : 0);
+        debugInfo.put("archivoPermisos", archivo.exists() ? archivo.canRead() : false);
+        debugInfo.put("directorioPadre", archivo.getParent());
+        debugInfo.put("directorioPadreExiste", archivo.getParentFile() != null && archivo.getParentFile().exists());
+
+        // Verificar rutas alternativas
+        List<String> rutasAlternativas = new ArrayList<>();
+        rutasAlternativas.add("/app/documentacion/documentos_cliente/" + rutaOriginal);
+        rutasAlternativas.add("./documentacion/documentos_cliente/" + rutaOriginal);
+        rutasAlternativas.add("documentacion/documentos_cliente/" + rutaOriginal);
+
+        Map<String, Boolean> rutasAlternativasExisten = new HashMap<>();
+        for (String rutaAlt : rutasAlternativas) {
+            rutasAlternativasExisten.put(rutaAlt, new File(rutaAlt).exists());
+        }
+        debugInfo.put("rutasAlternativas", rutasAlternativasExisten);
+
+        log.info("DEBUG: Informacion de diagnostico: {}", debugInfo);
+
+        return ResponseEntity.ok(debugInfo);
     }
 }
