@@ -12,6 +12,8 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Component;
 
+import com.armasimportacion.exception.DocumentGenerationException;
+import com.armasimportacion.exception.ResourceNotFoundException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -58,7 +60,7 @@ public class ContratoPDFGenerator {
 
         } catch (Exception e) {
             log.error("Error generando contrato para cliente ID: {}: {}", cliente.getId(), e.getMessage(), e);
-            throw new RuntimeException("Error generando contrato", e);
+            throw new DocumentGenerationException("Error generando contrato", e);
         }
     }
 
@@ -70,7 +72,7 @@ public class ContratoPDFGenerator {
             ClienteArma clienteArma = armasCliente.stream().findFirst().orElse(null);
             if (clienteArma == null) {
                 log.error("No se encontró arma asignada al cliente ID: {}", cliente.getId());
-                throw new RuntimeException("No se encontró arma asignada al cliente");
+                throw new ResourceNotFoundException("No se encontró arma asignada al cliente");
             }
 
             log.info("Arma encontrada: {}", clienteArma.getArma().getModelo());
@@ -126,12 +128,12 @@ public class ContratoPDFGenerator {
             variables.put("fechaActual", fechaActualEcuador);
 
             Licencia licencia = utils.obtenerLicenciaActiva(cliente);
-            String licenciaTitulo = licencia != null && licencia.getTitulo() != null && !licencia.getTitulo().trim().isEmpty()
+            String licenciaTitulo = licencia != null && licencia.getTitulo() != null && !licencia.getTitulo().isBlank()
                 ? licencia.getTitulo() : "";
             String licenciaNombre = licencia != null && licencia.getNombre() != null ? licencia.getNombre() : "";
             String licenciaCedula = "";
             if (licencia != null) {
-                if (licencia.getCedulaCuenta() != null && !licencia.getCedulaCuenta().trim().isEmpty()) {
+                if (licencia.getCedulaCuenta() != null && !licencia.getCedulaCuenta().isBlank()) {
                     licenciaCedula = licencia.getCedulaCuenta();
                 } else if (licencia.getRuc() != null) {
                     licenciaCedula = licencia.getRuc();
